# penagent

./: .gitignore  README.md  pyproject.toml  requirements.txt  start_conversation.sh  start_services.sh
containers/: docker-compose.yml  kali.Dockerfile  playwright.Dockerfile
core/: README.md  __init__.py  app_api.py  cli.py  demo.py  mcp_client.py  models.py  orchestrator.py  pyproject.toml  test_basic.py
core/prompts/: __init__.py  chat.py  intent.py  plan.py  report.py
core/strategies/: __init__.py  active_scanning.py  evaluation.py  information_gathering.py  spidering.py
mcp_servers/: CLI_README.md  CONTAINER_NAMING.md  README.md  ZAP_OPTIMIZATION.md  discovery.Dockerfile  docker-compose-optimized.yml  docker-compose.yml  docker-compose.yml.backup  kali.Dockerfile  mcp_cli.py  rag.Dockerfile  test_cli_examples.sh  websearch.Dockerfile  zap.Dockerfile  zap_combined.Dockerfile
mcp_servers/tests/: README.md  run_all_tests.py  test_discovery_mcp_server.py  test_kali_mcp_server.py  test_rag_mcp_server.py  test_websearch_mcp_server.py  test_zap_mcp_server.py
src/: cli.py
src/agent/: agent_service.py  graph_client.py  langgraph_agent.py  langgraph_workflow.py  logging_utils.py  memory.py  ollama_llm.py  planner.py  reporting.py
src/frontend/: app.py  components.py
src/mcp_servers/: kali_server.py
src/prompts/: agent_instructions.py  api_security.py  broken_auth.py  components.py  deserialization.py  idor.py  logging.py  misconfig.py  owasp_top10.py  sensitive_data.py  sqli.py  xss_loop.py  xxe.py
src/tests/: test_cli.py
src/tools/: kali_container_tool.py  (+5 more)
(+13 files in other folders)
