[tool.poetry]
name = "pentest-agent"
version = "0.1.0"
description = "Autonomous pentesting AI agent using langgraph."
authors = ["Pentest-Architect <pentest-architect@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
langgraph = "*"
click = "*"
rich = "*"
requests = "*"
playwright = "*"
pinecone-client = "*"
openai = "*"
ollama = "*"
streamlit-aggrid = "*"
streamlit = "^1.47.0"
mcp = "*"
fastmcp = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
flake8 = "*"

[tool.poetry.scripts]
pentest-agent = "src.cli:main" 